# wdpkr

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  build.rs  justfile
.beads/: issues.jsonl  metadata.json
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  astro.config.mjs  package.json
docs/public/: CNAME
docs/src/content/docs/: getting-started.md  index.mdx
docs/src/content/docs/guides/: configuration.md  decisions.md  how-it-works.md  providers.md  storage.md  taps.md
docs/src/content/docs/reference/: architecture.md  commands.md  evaluation.md
docs/src/styles/: zen.css
eval/: SPEC.md
eval/cases/: wdpkr-deep.json  wdpkr.json
src/: lib.rs  main.rs
src/ai_providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  voyage.rs
src/chunk/: SPEC.md  languages.rs  mod.rs  tree_sitter.rs
src/cli/: SPEC.md  config.rs  decision.rs  delete.rs  eval.rs  index.rs  init.rs  mod.rs  prompt.rs  reinforce.rs  search.rs
src/cli/templates/: ci_workflow.yml  claude_md.md  megagrepignore  wdpkrignore
src/config/: SPEC.md  default_config.yaml  embed.rs  indexer.rs  mod.rs  plugin.rs  store.rs  summarizer.rs  tap.rs  test_helpers.rs
src/decision/: mod.rs
src/embed/: SPEC.md  mod.rs  ollama.rs  openai.rs  voyage.rs
src/eval/: SPEC.md  metrics.rs  mod.rs  output.rs  runner.rs
src/http/: mod.rs
src/indexer/: SPEC.md  cost.rs  docstring.rs  git.rs  mod.rs  pipeline.rs  prose.rs  walk.rs
src/plugin/: files.rs  mod.rs  process.rs
src/search/: SPEC.md  mod.rs  output.rs
src/store/: CLAUDE.md  SPEC.md  duckdb.rs  lancedb.rs  mod.rs  nidus.rs  turbopuffer.rs
src/summarize/: SPEC.md  anthropic.rs  mod.rs  prompts.rs  rollup.rs
src/tap/: files.rs  linear.rs  mod.rs  notion.rs  process.rs
src/testing/: mock_embed.rs  mock_plugin.rs  mock_store.rs  mock_summarize.rs  mock_tap.rs  mod.rs
tests/: SPEC.md  decision_recall_e2e.rs  index_search_e2e.rs  search_e2e.rs
