[package]
name = "wdpkr"
version = "0.13.1"
edition = "2024"
rust-version = "1.96"
description = "Codebase search via vector retrieval over LLM-generated summaries, exposed as a CLI for AI coding agents."
repository = "https://github.com/duckedup/wdpkr"
license = "MIT"

[lib]
name = "wdpkr"
path = "src/lib.rs"

[[bin]]
name = "wdpkr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
ignore = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
nidus = "0.27"
serde_json = "1"
dirs = "6"
owo-colors = { version = "4", features = ["supports-colors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "time"] }
tree-sitter = "0.24"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
globset = "0.4"
linear-mg = "0.2"

[dev-dependencies]
serial_test = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
